--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-globe.gl": "^2.14.6",
     "react-scripts": "4.0.2"
   },
   "scripts": {
