--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-globe.gl": "^2.14.6",
-    "react-scripts": "4.0.2"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
