--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-globe.gl": "^2.14.6",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-xml-parser": "^1.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
