--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.0.16",
     "geolib": "^3.3.1",
-    "html-react-parser": "^1.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-globe.gl": "^2.14.6",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.0",
     "react-xml-parser": "^1.1.8"
   },
   "scripts": {
