--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.0.16",
         "geolib": "^3.3.1",
-        "react": "^17.0.2",
         "node-sass": "^5.0.0",
+        "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-globe.gl": "^2.18.0",
         "react-scripts": "^4.0.3",
         "react-select": "^4.3.0",
-        "react-xml-parser": "^1.1.8"
+        "react-xml-parser": "^1.1.8",
+        "three": "^0.127.0"
     },
     "scripts": {
         "start": "react-scripts start",
