--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-scripts": "^4.0.3",
         "react-select": "^4.3.0",
         "react-xml-parser": "^1.1.8",
+        "solar-calculator": "^0.3.0",
         "three": "^0.126.1"
     },
     "scripts": {
