feat(web): add redux and test NASA's WorldWind API
feat: experiment with solar-calculator to control day/night animations

* fix: excessive animation frame re-creation

* wip: cast shadow via solar path's antipodes

* feat: revert original functionality to globe

* feat(sighting-cards): add core styling

* feat(search): add core styling

* feat(dropdown): add country-flag-emoji component

* feat(globe-container): add title and follow ISS checkbox

* fix: syntax error for titleMaterial

* chore: removed console.log within useEffect for directionalLight obj

feat: complete core MVP enhancements

* feat(sighting-cards): add header prop to indiciate it is header

* feat(sighting-cards): conditionally render header or content from prop

* feat(sighting-cards): create helper function for filtering by Date

* feat(dropdown): integrate react-select to control emoji input

* feat(dropdown): clear search input onCountryChange in currentUser

* feat(dropdown): replace conditional rendering with css logic

* feat(globe): set starting POV to current ISS location

* feat: revert useEffect changes to prevent POV lock when searching

* feat: revert to npm package for country-emoji

feat(web): add redux

* deps: add redux dependencies and redux-devtools to devDependencies

* chore: create shared folder, reorg reducers by feature & update imports

* chore: scaffold actionCreators by feature

* chore: revise imports for extensibility

* feat: add GET_USER_LOCATION action

* feat: integrate redux store and redux-devtools

* feat: add initialState to user's and search's reducers

* feat: scaffold earth's reducer for future use

* feat: rename and refactor earthReducer with redux API

* feat: incorporate async dispatches

* feat: refactor with redux-toolkit

* feat: integrate redux and Globe

* fix: unravel nested state

feat(globe): prototype NASA's worldwind for Globe asset

* feat: scaffold Worldwindjs interface object from docs

* feat: create Canvas component for dynamic control [WI

--- a/package.json
+++ b/package.json
@@ -2,36 +2,12 @@
     "name": "space-station-tracker",
     "version": "1.0.0",
     "private": true,
-    "dependencies": {
-        "geolib": "^3.3.3",
-        "luxon": "^2.3.0",
-        "node-sass": "^6.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-globe.gl": "^2.19.0",
-        "react-scripts": "^4.0.3",
-        "react-select": "^4.3.1",
-        "react-xml-parser": "^1.1.8",
-        "svg-arc": "^1.0.2",
-        "three": "0.133.0"
-    },
-    "devDependencies": {
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0"
-    },
     "scripts": {
         "start-client": "react-scripts start",
         "build": "react-scripts build && (cd server && npm install)",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "start": "cd server && npm start"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
     },
     "browserslist": {
         "production": [
@@ -45,7 +21,34 @@
             "last 1 safari version"
         ]
     },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
     "engines": {
         "node": "16.x"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.5.1",
+        "country-emoji": "^1.5.6",
+        "geolib": "^3.3.3",
+        "luxon": "^2.3.0",
+        "node-sass": "^6.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-globe.gl": "^2.19.0",
+        "react-redux": "^7.2.4",
+        "react-select": "^4.3.1",
+        "react-scripts": "^4.0.3",
+        "react-xml-parser": "^1.1.8",
+        "worldwindjs": "^1.8.0"
+    },
+    "devDependencies": {
+        "@redux-devtools/core": "^3.9.2",
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0"
     }
 }
