WIP  adding emoji button

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.0.16",
+        "country-emoji": "https://github.com/meeDamian/country-emoji.git",
         "geolib": "^3.3.1",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
