WIP compass drawing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.0.16",
-        "country-emoji": "https://github.com/meeDamian/country-emoji.git",
+        "country-emoji": "^1.5.6",
         "geolib": "^3.3.1",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
@@ -16,6 +16,7 @@
         "react-select": "^4.3.0",
         "react-xml-parser": "^1.1.8",
         "solar-calculator": "^0.3.0",
+        "svg-arc": "^1.0.2",
         "three": "^0.126.1"
     },
     "scripts": {
