--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^13.0.16",
-        "country-emoji": "^1.5.6",
+        "@testing-library/user-event": "^13.1.9",
         "geolib": "^3.3.1",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-globe.gl": "^2.18.0",
         "react-scripts": "^4.0.3",
-        "react-select": "^4.3.0",
+        "react-select": "^4.3.1",
         "react-xml-parser": "^1.1.8",
         "solar-calculator": "^0.3.0",
         "svg-arc": "^1.0.2",
-        "three": "^0.126.1"
+        "three": "0.126.1"
     },
     "scripts": {
         "start": "react-scripts start",
