--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "space-station-tracker",
+    "name": "server_space-station-tracker",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -19,10 +19,11 @@
         "three": "0.126.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start-client": "react-scripts start",
+        "build": "react-scripts build && (cd server && npm install)",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "start": "cd server && npm start"
     },
     "eslintConfig": {
         "extends": [
