Add server and client start script commands

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "build": "react-scripts build && (cd server && npm install)",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "start": "cd server && npm start"
+        "start-server": "cd server && npm start"
     },
     "eslintConfig": {
         "extends": [
