--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "main": "index.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node index.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
