--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-globe.gl": "^2.18.0",
         "react-scripts": "^4.0.3",
         "react-select": "^4.3.1",
+        "react-simple-snackbar": "^1.1.11",
         "react-xml-parser": "^1.1.8",
         "solar-calculator": "^0.3.0",
         "svg-arc": "^1.0.2",
