--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "server_space-station-tracker",
+    "name": "proxy_server",
     "version": "0.1.0",
     "private": true,
     "main": "index.js",
@@ -7,7 +7,7 @@
         "start": "node index.js"
     },
     "dependencies": {
-        "axios": "^0.21.1",
-        "express": "^4.17.1"
+        "axios": "^0.24.0",
+        "express": "^4.17.2"
     }
 }
