--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "geolib": "^3.3.3",
+        "luxon": "^2.3.0",
         "node-sass": "^6.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
