--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0"
+        "@testing-library/user-event": "^13.5.0",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "typescript": "^4.5.4"
     },
     "scripts": {
         "start-client": "react-scripts start",
