--- a/web/package.json
+++ b/web/package.json
@@ -5,13 +5,11 @@
     "dependencies": {
         "geolib": "^3.3.3",
         "luxon": "^2.3.0",
-        "node-sass": "^6.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-globe.gl": "^2.19.0",
         "react-scripts": "5.0.0",
         "react-select": "^4.3.1",
-        "react-xml-parser": "^1.1.8",
         "svg-arc": "^1.0.2",
         "three": "0.133.0"
     },
@@ -21,6 +19,9 @@
         "@testing-library/user-event": "^13.5.0",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "autoprefixer": "^10.4.2",
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.13",
         "typescript": "^4.5.4"
     },
     "overrides": {
