--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dependencies": {
         "axios": "^0.24.0",
         "dotenv": "^10.0.0",
-        "express": "^4.17.2"
+        "express": "^4.17.2",
+        "fast-xml-parser": "^4.0.1",
+        "luxon": "^2.3.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.2",
