--- a/package.json
+++ b/package.json
@@ -1,52 +1,21 @@
 {
     "name": "space-station-tracker",
-    "version": "1.0.0",
+    "version": "1.1.0",
+    "main": "index.js",
     "private": true,
     "dependencies": {
-        "geolib": "^3.3.3",
-        "luxon": "^2.3.0",
-        "node-sass": "^6.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-globe.gl": "^2.19.0",
-        "react-scripts": "5.0.0",
-        "react-select": "^4.3.1",
-        "react-xml-parser": "^1.1.8",
-        "svg-arc": "^1.0.2",
-        "three": "0.133.0"
+        "axios": "^0.24.0",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.2"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/react": "^17.0.38",
-        "@types/react-dom": "^17.0.11",
+        "@types/express": "^4.17.2",
+        "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
     },
     "scripts": {
-        "start-client": "react-scripts start",
-        "build": "react-scripts build && (cd server && npm install)",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "start": "cd server && npm start"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "start": "npx ts-node index.ts",
+        "build": "npx tsc && (cd web && npm run build)"
     },
     "engines": {
         "node": "16.x"
