--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.2",
+        "@types/jest": "^27.4.0",
+        "jest": "^27.4.7",
+        "nock": "^13.2.2",
+        "supertest": "^6.2.1",
+        "ts-jest": "^27.1.3",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
     },
     "scripts": {
         "start": "npx ts-node index.ts",
         "build": "npx tsc && (cd web && npm run build)",
-        "test": "cd web && npm test"
+        "test": "npm run test:server && npm run test:web",
+        "test:server": "jest",
+        "test:web": "cd web && npm test"
     },
     "engines": {
         "node": "16.x"
