fix(devops): install dependencies script
* feat: add deepsource support for typescript

* fix: run ci/cd only when PR is marked ready

* chore: explictly exclude node_modules as per policy rule

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    if: github.event.pull_request.draft == false
 
     runs-on: ubuntu-latest
 
@@ -22,6 +23,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: npm run installAll
     - run: npm run build --if-present
     - run: npm test
