feat: add pre-commit hook to format and test code
* chore: format all files with prettier

* chore: replace depreciated jsxBracketSameLine with bracketSameLine

* fix: npm test scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,15 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "baseUrl": "./",
-    "outDir": "build",
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "lib": ["ESNext"],
-    "allowJs": true,
-    "forceConsistentCasingInFileNames": true,
-  },
-  "exclude": [
-    "build",
-    "node_modules"
-  ],
-  "include": [
-    "**.ts"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "baseUrl": "./",
+        "outDir": "build",
+        "target": "ESNext",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "lib": ["ESNext"],
+        "allowJs": true,
+        "forceConsistentCasingInFileNames": true
+    },
+    "exclude": ["build", "node_modules"],
+    "include": ["**.ts"]
 }
