--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,7 @@
     "tabWidth": 4,
     "singleQuote": true,
     "bracketSpacing": true,
-    "jsxBracketSameLine": false,
+    "bracketSameLine": false,
     "useTabs": false,
     "jsxSingleQuote": true,
     "trailingComma": "all"
