--- a/package.json
+++ b/package.json
@@ -13,24 +13,33 @@
     "devDependencies": {
         "@types/express": "^4.17.2",
         "@types/jest": "^27.4.0",
+        "husky": "^7.0.0",
         "jest": "^27.4.7",
+        "lint-staged": "^12.1.7",
         "nock": "^13.2.2",
+        "prettier": "^2.5.1",
         "supertest": "^6.2.1",
         "ts-jest": "^27.1.3",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
     },
     "scripts": {
+        "prepare": "node ./.husky/prepare.js",
+        "build": "npx tsc && (cd web && npm run build)",
         "deps:server": "npm ci",
         "deps:web": "cd web && npm ci",
         "installAll": "npm run deps:server && npm run deps:web",
+        "lint": "prettier --check .",
+        "format": "prettier --write .",
         "start": "npx ts-node index.ts",
-        "build": "npx tsc && (cd web && npm run build)",
         "test": "npm run test:server && npm run test:web",
         "test:server": "jest",
-        "test:web": "cd web && npm test"
+        "test:web": "cd web && npm run test:ci"
     },
     "engines": {
         "node": "16.x"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
     }
 }
