refactor: address all deepsource issues
* chore(deps): bump most to latest

* chore(devops): remove dev branch from workflow

* chore: update react entrypoint with v18 API

* chore: add interfaces to replace implicit any

* feat: scaffold aria support

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI before CD to Heroku
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, dev ]
+    branches: [ main ]
 
 jobs:
   build:
