--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "@types/jest": "^27.5.0",
+        "@types/jest": "^28.1.6",
         "@types/luxon": "^2.3.2",
+        "@types/supertest": "^2.0.12",
         "husky": "^8.0.1",
-        "jest": "^28.1.0",
-        "lint-staged": "^12.4.1",
-        "nock": "^13.2.4",
-        "prettier": "^2.6.2",
-        "supertest": "^6.2.3",
+        "jest": "^28.1.3",
+        "lint-staged": "^13.0.3",
+        "nock": "^13.2.9",
+        "prettier": "^2.7.1",
+        "supertest": "^6.2.4",
         "ts-jest": "^28.0.2",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.4"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4"
     },
     "scripts": {
         "prepare": "node ./.husky/prepare.js",
