--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,30 +1,29 @@
 {
     "compilerOptions": {
-        "lib": ["DOM", "DOM.Iterable", "ESNext"],
-        "noImplicitAny": false,
         "allowSyntheticDefaultImports": true,
-        "sourceMap": true,
-        "target": "ES2016",
+        "baseUrl": "src",
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
+        "isolatedModules": true,
         "jsx": "react-jsx",
-        "types": ["react"],
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "module": "ESNext",
         "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "removeComments": true,
+        "noEmit": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": false,
         "noImplicitReturns": true,
         "noUnusedLocals": true,
-        "strict": true,
         "outDir": "build",
-        "baseUrl": "src",
-        "strictNullChecks": true,
-        "allowJs": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "noFallthroughCasesInSwitch": true,
+        "removeComments": true,
         "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": true
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "strictNullChecks": true,
+        "target": "ES2016",
+        "types": ["react"],
     },
     "exclude": ["build", "public", "node_modules"],
     "include": ["src"]
