fix(devops): add heroku-prebuild script to capture all dependencies

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "scripts": {
         "prepare": "node ./.husky/prepare.js",
+        "heroku-prebuild": "CI=true npm run installAll",
         "build": "npx tsc && (cd web && npm run build)",
         "deps:server": "npm ci",
         "deps:web": "cd web && npm ci",
