--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
     "main": "index.js",
     "private": true,
     "dependencies": {
-        "axios": "^0.24.0",
-        "dotenv": "^11.0.0",
-        "express": "^4.17.2",
-        "fast-xml-parser": "^4.0.1",
-        "luxon": "^2.3.0"
+        "axios": "^0.27.2",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "fast-xml-parser": "^4.0.7",
+        "luxon": "^2.4.0"
     },
     "devDependencies": {
-        "@types/express": "^4.17.2",
-        "@types/jest": "^27.4.0",
-        "husky": "^7.0.0",
-        "jest": "^27.4.7",
-        "lint-staged": "^12.1.7",
-        "nock": "^13.2.2",
-        "prettier": "^2.5.1",
-        "supertest": "^6.2.1",
-        "ts-jest": "^27.1.3",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.4"
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.5.0",
+        "@types/luxon": "^2.3.2",
+        "husky": "^8.0.1",
+        "jest": "^28.1.0",
+        "lint-staged": "^12.4.1",
+        "nock": "^13.2.4",
+        "prettier": "^2.6.2",
+        "supertest": "^6.2.3",
+        "ts-jest": "^28.0.2",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.4"
     },
     "scripts": {
         "prepare": "node ./.husky/prepare.js",
