--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "main": "index.js",
     "private": true,
     "dependencies": {
-        "axios": "^1.3.4",
-        "dotenv": "^16.0.3",
+        "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "fast-xml-parser": "^4.1.3",
+        "fast-xml-parser": "^4.2.5",
         "luxon": "^3.3.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.0",
-        "@types/luxon": "^3.2.0",
+        "@types/jest": "^29.5.3",
+        "@types/luxon": "^3.3.0",
         "@types/supertest": "^2.0.12",
         "husky": "^8.0.3",
-        "jest": "^29.5.0",
-        "lint-staged": "^13.2.0",
-        "nock": "^13.3.0",
-        "prettier": "^2.8.4",
+        "jest": "^29.6.1",
+        "lint-staged": "^13.2.3",
+        "nock": "^13.3.2",
+        "prettier": "^3.0.0",
         "supertest": "^6.3.3",
-        "ts-jest": "^29.0.5",
-        "typescript": "^5.0.2"
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.1.6"
     },
     "scripts": {
         "prepare": "node ./.husky/prepare.js",
@@ -40,7 +40,7 @@
         "test:web": "cd web && npm run test:ci"
     },
     "engines": {
-        "node": "16.x"
+        "node": ">=18.x"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
