--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,10 @@
 {
-    "semi": true,
-    "printWidth": 100,
-    "tabWidth": 4,
-    "singleQuote": true,
-    "bracketSpacing": true,
     "bracketSameLine": false,
-    "useTabs": false,
-    "jsxSingleQuote": true,
-    "trailingComma": "all"
+    "bracketSpacing": true,
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "useTabs": false
 }
