--- a/web/package.json
+++ b/web/package.json
@@ -4,36 +4,54 @@
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.3.0",
+        "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "geolib": "^3.3.3",
-        "luxon": "^2.4.0",
+        "luxon": "^3.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-globe.gl": "^2.22.1",
-        "react-scripts": "5.0.1",
-        "react-select": "^5.4.0",
+        "react-globe.gl": "^2.23.3",
+        "react-select": "^5.7.0",
         "svg-arc": "^1.0.2",
         "three": "0.140.2"
     },
     "devDependencies": {
-        "@types/react": "^18.0.17",
-        "@types/react-dom": "^18.0.6",
-        "autoprefixer": "^10.4.8",
-        "postcss": "^8.4.16",
-        "tailwindcss": "^3.1.8",
-        "typescript": "^4.7.4"
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.0",
+        "@types/jest": "^29.5.0",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.55.0",
+        "@typescript-eslint/parser": "^5.55.0",
+        "@vitejs/plugin-react": "^3.1.0",
+        "autoprefixer": "^10.4.14",
+        "babel-jest": "^29.5.0",
+        "browserslist": "^4.21.5",
+        "cssnano": "^5.1.15",
+        "eslint": "^8.36.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.7",
+        "ts-jest": "^29.0.5",
+        "typescript": "^5.0.2",
+        "vite": "^4.2.0",
+        "vite-plugin-eslint": "^1.8.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build && mv ./build ../build/web",
-        "test:ci": "CI=true react-scripts test --transformIgnorePatterns \"node_modules/(?!web)/\""
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "build": "tsc && vite build",
+        "dev": "vite",
+        "lint": "eslint src",
+        "preview": "vite preview",
+        "start": "vite",
+        "test:ci": "NODE_OPTIONS=--experimental-vm-modules CI=true jest"
     },
     "browserslist": {
         "production": [
@@ -45,6 +63,37 @@
             "last 1 chrome version",
             "last 1 firefox version",
             "last 1 safari version"
+        ]
+    },
+    "jest": {
+        "extensionsToTreatAsEsm": [
+            ".ts",
+            ".tsx"
+        ],
+        "verbose": true,
+        "moduleNameMapper": {
+            "@common/(.*)": "<rootDir>/src/common/$1",
+            "@components/(.*)": "<rootDir>/src/components/$1",
+            "@containers/(.*)": "<rootDir>/src/containers/$1",
+            "@utils/(.*)": "<rootDir>/src/utils/$1"
+        },
+        "preset": "ts-jest",
+        "setupFilesAfterEnv": [
+            "<rootDir>/jest.setup.ts"
+        ],
+        "testEnvironment": "jsdom",
+        "transform": {
+            "^.+\\.(js|jsx)$": "babel-jest",
+            "^.+\\.(ts|tsx)?$": [
+                "ts-jest",
+                {
+                    "useESM": true
+                }
+            ]
+        },
+        "transformIgnorePatterns": [
+            "node_modules/(?!(d3-geo|react-globe.gl))$",
+            "node_modules/(?!three/examples/jsm)$"
         ]
     }
 }
