--- a/web/package.json
+++ b/web/package.json
@@ -8,21 +8,21 @@
         "@testing-library/user-event": "^14.4.3",
         "geolib": "^3.3.4",
         "luxon": "^3.3.0",
-        "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-globe.gl": "^2.24.2",
-        "react-select": "^5.7.4",
         "react-query": "^3.39.3",
+        "react-select": "^5.7.4",
+        "react": "^18.2.0",
         "svg-arc": "^1.0.2",
-        "three": "0.140.2"
+        "three": "0.145.0"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.9",
         "@babel/preset-react": "^7.22.5",
         "@babel/preset-typescript": "^7.22.5",
         "@types/jest": "^29.5.3",
-        "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/react": "^18.2.15",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.0.3",
@@ -30,21 +30,21 @@
         "babel-jest": "^29.6.1",
         "browserslist": "^4.21.9",
         "cssnano": "^6.0.1",
-        "eslint": "^8.45.0",
-        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.1.0",
+        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
-        "jest": "^29.6.1",
+        "eslint": "^8.45.0",
         "jest-environment-jsdom": "^29.6.1",
+        "jest": "^29.6.1",
         "postcss": "^8.4.26",
         "tailwindcss": "^3.3.3",
         "ts-jest": "^29.1.1",
         "typescript": "^5.1.6",
-        "vite": "^4.4.4",
-        "vite-plugin-eslint": "^1.8.1"
+        "vite-plugin-eslint": "^1.8.1",
+        "vite": "^4.4.4"
     },
     "scripts": {
         "build": "tsc && vite build",
