build: update OS and Node.js version
* chore: enable npm workspace

* chore: update configs and scripts

* deps: bump all dependencies to latest

* test(github): update workflow config

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,11 @@
-**/coverage
-**/node_modules
-**/build
-**/package.json
-**/yarn.lock
-**/package-lock.json
-**/jsconfig.json
+*.css
+*.html
 **/.deepsource.toml
 **/.github
+**/coverage
+**/dist
+**/jsconfig.json
+**/node_modules
+**/package.json
+**/package-lock.json
+**/yarn.lock
