--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-*.env.
-.env.*
-
+# package logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# production
+dist
+
+# secrets
+*.env.
+.env.*
+
+# system files
+.DS_Store
+
+# testing
+coverage
