--- a/package.json
+++ b/package.json
@@ -1,48 +1,35 @@
 {
     "name": "space-station-tracker",
-    "version": "1.1.0",
-    "main": "index.js",
+    "version": "1.2.0",
+    "main": "dist/server/index.js",
     "private": true,
-    "dependencies": {
-        "axios": "^1.3.4",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "fast-xml-parser": "^4.1.3",
-        "luxon": "^3.3.0"
-    },
     "devDependencies": {
-        "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.0",
-        "@types/luxon": "^3.2.0",
-        "@types/supertest": "^2.0.12",
+        "concurrently": "^8.2.0",
         "husky": "^8.0.3",
-        "jest": "^29.5.0",
-        "lint-staged": "^13.2.0",
-        "nock": "^13.3.0",
-        "prettier": "^2.8.4",
-        "supertest": "^6.3.3",
-        "ts-jest": "^29.0.5",
-        "typescript": "^5.0.2"
+        "lint-staged": "^13.2.3",
+        "typescript": "^5.1.6"
     },
     "scripts": {
-        "prepare": "node ./.husky/prepare.js",
-        "heroku-prebuild": "CI=true npm run installAll",
-        "build": "npx tsc && (cd web && npm run build)",
-        "deps:server": "npm ci",
-        "deps:web": "cd web && npm ci",
-        "installAll": "npm run deps:server && npm run deps:web",
-        "lint": "prettier --check .",
+        "build": "npm run compile --workspace=server && npm run build --workspace=web",
+        "dev": "concurrently --prefix \"[{name}]\" --names \"SERVER,WEB\" -c \"bgMagenta.bold,bgBlue.bold,bgGreen.bold\" \"npm run dev:server\" \"npm run dev:web\"",
+        "dev:server": "npm run dev --workspace=server",
+        "dev:web": "npm run dev --workspace=web",
         "format": "prettier --write .",
-        "dev": "npx ts-node index.ts",
-        "start": "node build/index.js",
-        "test": "npm run test:server && npm run test:web",
-        "test:server": "jest",
-        "test:web": "cd web && npm run test:ci"
+        "heroku-prebuild": "npm ci",
+        "heroku-postbuild": "npm ci --omit=dev",
+        "lint": "prettier --check .",
+        "prepare": "node ./.husky/prepare.js",
+        "start": "npm run start --workspace=server",
+        "test": "npm run test:ci --workspace=server && npm run test:ci --workspace=web"
     },
     "engines": {
-        "node": "16.x"
+        "node": "20.x"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
-    }
+    },
+    "workspaces": [
+        "server",
+        "web"
+    ]
 }
