--- a/web/package.json
+++ b/web/package.json
@@ -1,48 +1,48 @@
 {
-    "name": "web",
-    "version": "1.1.0",
+    "name": "@space-station-tracker/web",
+    "version": "1.2.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^14.0.0",
-        "@testing-library/user-event": "^14.4.3",
-        "geolib": "^3.3.3",
-        "luxon": "^3.3.0",
+        "geolib": "^3.3.4",
+        "luxon": "^3.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-globe.gl": "^2.23.3",
-        "react-select": "^5.7.0",
+        "react-globe.gl": "^2.24.3",
+        "react-select": "^5.7.4",
         "svg-arc": "^1.0.2",
         "three": "0.140.2"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.18.6",
-        "@babel/preset-typescript": "^7.21.0",
-        "@types/jest": "^29.5.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.55.0",
-        "@typescript-eslint/parser": "^5.55.0",
-        "@vitejs/plugin-react": "^3.1.0",
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.5.3",
+        "@types/react-dom": "^18.2.7",
+        "@types/react": "^18.2.20",
+        "@typescript-eslint/eslint-plugin": "^6.3.0",
+        "@typescript-eslint/parser": "^6.3.0",
+        "@vitejs/plugin-react": "^4.0.4",
         "autoprefixer": "^10.4.14",
-        "babel-jest": "^29.5.0",
-        "browserslist": "^4.21.5",
-        "cssnano": "^5.1.15",
-        "eslint": "^8.36.0",
+        "babel-jest": "^29.6.2",
+        "browserslist": "^4.21.10",
+        "cssnano": "^6.0.1",
+        "eslint": "^8.47.0",
+        "eslint-config-airbnb-typescript": "^17.1.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-config-prettier": "^8.7.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-jsx-a11y": "^6.7.1",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
-        "jest": "^29.5.0",
-        "jest-environment-jsdom": "^29.5.0",
-        "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.7",
-        "ts-jest": "^29.0.5",
-        "typescript": "^5.0.2",
-        "vite": "^4.2.0",
+        "jest": "^29.6.2",
+        "jest-environment-jsdom": "^29.6.2",
+        "postcss": "^8.4.27",
+        "tailwindcss": "^3.3.3",
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.1.6",
+        "vite": "^4.4.9",
         "vite-plugin-eslint": "^1.8.1"
     },
     "scripts": {
@@ -50,7 +50,6 @@
         "dev": "vite",
         "lint": "eslint src",
         "preview": "vite preview",
-        "start": "vite",
         "test:ci": "NODE_OPTIONS=--experimental-vm-modules CI=true jest"
     },
     "browserslist": {
