--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "../tsconfig.json",
     "compilerOptions": {
         "allowJs": false,
         "allowSyntheticDefaultImports": true,
@@ -16,7 +17,7 @@
         "noImplicitAny": false,
         "noImplicitReturns": true,
         "noUnusedLocals": true,
-        "outDir": "build",
+        "outDir": "../dist",
         "paths": {
             "@common/*": ["src/common/*"],
             "@components/*": ["src/components/*"],
@@ -32,6 +33,6 @@
         "types": ["jest", "node", "vite/client", "@testing-library/jest-dom"],
         "useDefineForClassFields": true
     },
-    "exclude": ["build", "public", "node_modules"],
-    "include": ["src/*", "jest.setup.ts"]
+    "exclude": ["dist", "public", "node_modules"],
+    "include": ["src", "jest.setup.ts"]
 }
