--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,20 +12,19 @@ env:
 jobs:
   build:
     if: github.event.pull_request.draft == false
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+
+    - name: Install Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 'lts/*'
         cache: 'npm'
+
     - run: npm ci
+
     - run: npm run build --if-present
+
     - run: npm test
