--- a/web/package.json
+++ b/web/package.json
@@ -5,50 +5,50 @@
     "dependencies": {
         "geolib": "^3.3.4",
         "luxon": "^3.7.2",
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "react-globe.gl": "^2.36.0",
+        "react": "^19.2.4",
+        "react-dom": "^19.2.4",
+        "react-globe.gl": "^2.37.0",
         "react-select": "^5.10.2",
         "svg-arc": "^1.0.2",
-        "three": "0.175.0"
+        "three": "^0.182.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.28.3",
-        "@babel/preset-react": "^7.27.1",
-        "@babel/preset-typescript": "^7.27.1",
-        "@eslint/js": "^9.36.0",
-        "@tailwindcss/postcss": "^4.1.13",
-        "@tailwindcss/vite": "^4.1.13",
-        "@testing-library/jest-dom": "^6.8.0",
-        "@testing-library/react": "^16.3.0",
+        "@babel/preset-env": "^7.29.0",
+        "@babel/preset-react": "^7.28.5",
+        "@babel/preset-typescript": "^7.28.5",
+        "@eslint/js": "^9.39.2",
+        "@tailwindcss/postcss": "^4.1.18",
+        "@tailwindcss/vite": "^4.1.18",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.2",
         "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^30.0.0",
-        "@types/react": "^19.1.14",
-        "@types/react-dom": "^19.1.9",
-        "@types/three": "^0.175.0",
-        "@vitejs/plugin-react": "^4.3.4",
-        "autoprefixer": "^10.4.21",
-        "babel-jest": "^30.1.2",
-        "browserslist": "^4.26.2",
-        "cssnano": "^7.1.1",
-        "eslint": "^9.36.0",
+        "@types/react": "^19.2.10",
+        "@types/react-dom": "^19.2.3",
+        "@types/three": "^0.182.0",
+        "@vitejs/plugin-react": "^5.1.2",
+        "autoprefixer": "^10.4.24",
+        "babel-jest": "^30.2.0",
+        "browserslist": "^4.28.1",
+        "cssnano": "^7.1.2",
+        "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
         "eslint-import-resolver-typescript": "^4.4.4",
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
-        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-prettier": "^5.5.5",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "globals": "^16.4.0",
-        "jest": "^30.1.3",
-        "jest-environment-jsdom": "^30.1.2",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "globals": "^17.2.0",
+        "jest": "^30.2.0",
+        "jest-environment-jsdom": "^30.2.0",
         "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.13",
-        "ts-jest": "^29.4.4",
-        "typescript": "^5.9.2",
-        "typescript-eslint": "^8.44.1",
-        "vite": "^7.1.11",
-        "vite-tsconfig-paths": "^5.1.4"
+        "tailwindcss": "^4.1.18",
+        "ts-jest": "^29.4.6",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.54.0",
+        "vite": "^7.3.1",
+        "vite-tsconfig-paths": "^6.0.5"
     },
     "engines": {
         "node": ">=22.20.0",
